fixed overflow issue

--- a/src/pages/dashboard.css
+++ b/src/pages/dashboard.css
@@ -25,6 +25,9 @@
     /* color:#000; */
     border-radius: 10px;
     padding: 30px 40px;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: #F8492D #fff;
 }
 
 /* .dashboard .main {
